--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
+    "firebase": "^4.4.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
