--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1"
