--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "firebase": "^4.4.0",
+    "history": "^4.7.2",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
