--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Basic setup of a react project with webpack",
   "main": "index.js",
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./src src/ -o src/dist/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/dist/ --watch --recursive",
-    "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
-    "start": "npm-run-all -p watch-css dev",
-    "prod": "NODE_ENV=production webpack"
+    "build": "webpack -p --progress --config webpack.config.js",
+    "dev-build": "webpack --progress -d --config webpack.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --progress -d --config webpack.config.js --watch"
   },
   "author": "Hurricane Interactive",
   "license": "MIT",
@@ -18,6 +17,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.2",
     "firebase": "^4.4.0",
     "history": "^4.7.2",
@@ -26,6 +26,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1"
@@ -37,5 +38,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "uglifyjs-webpack-plugin": "^0.4.6"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
